# docs/swagger.json
@@ -8,14 +8,14 @@
         }
     },
     "paths": {
-        "/admin/category/add": {
-            "post": {
+        "/admin/brand": {
+            "get": {
                 "security": [
                     {
                         "BearerTokenAuth": []
                     }
                 ],
-                "description": "Using this handler, admin can add a new category",
+                "description": "Get a paginated list of brands using this handler.",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,27 +23,81 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admins"
+                    "Brand"
                 ],
-                "summary": "Add Category",
+                "summary": "Get Paginated List of Brands",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Name of the category",
-                        "name": "name",
+                        "type": "integer",
+                        "description": "Page number for pagination (default 1)",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to return per page (default 5)",
+                        "name": "limit",
                         "in": "query",
                         "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Paginated list of brands",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid input or validation error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Create a new brand using this handler.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Brand"
+                ],
+                "summary": "Create a Brand",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name of the brand",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description of the brand",
+                        "name": "description",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Brand created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input or validation error",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -51,7 +105,69 @@
                 }
             }
         },
-        "/admin/category/all": {
+        "/admin/brand/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Edit an existing brand using this handler.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Brand"
+                ],
+                "summary": "Edit a Brand by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the brand to edit",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Updated name of the brand",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Updated description of the brand",
+                        "name": "description",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Brand edited successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input or validation error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Brand not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/category": {
             "get": {
                 "security": [
                     {
@@ -66,7 +182,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admins"
+                    "Category"
                 ],
                 "summary": "Get All Categories",
                 "parameters": [
@@ -99,6 +215,109 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Using this handler, admin can add a new category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Add Category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name of the category",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/category/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Edit an existing category using this handler.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Edit a Category by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the category to edit",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Updated name of the category",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Updated description of the category",
+                        "name": "description",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Category edited successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input or validation error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Category not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
             }
         },
         "/admin/login/": {
@@ -115,13 +334,6 @@
                 ],
                 "summary": "Admin login",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "With the bearer started",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Admin login details",
                         "name": "admin",
@@ -148,11 +360,11 @@
                 }
             }
         },
-        "/admin/seller/block/{id}": {
+        "/admin/seller/block": {
             "patch": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "Using this handler, admin can block a seller",
@@ -191,11 +403,11 @@
                 }
             }
         },
-        "/admin/sellers/block/": {
+        "/admin/sellers/block": {
             "patch": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "Using this handler, admin can block a seller",
@@ -238,7 +450,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "Using this handler, admin can get a list of sellers",
@@ -377,11 +589,54 @@
                 }
             }
         },
-        "/admin/user/block/": {
+        "/admin/sellers/verify": {
             "patch": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Using this handler, admin can Verify a seller",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admins"
+                ],
+                "summary": "Verify Seller",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Seller ID in the URL path",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/user/block": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "using this handler admin can block user",
@@ -420,11 +675,11 @@
                 }
             }
         },
-        "/admin/user/getuser/{id}": {
+        "/admin/user/getuser": {
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "using this handler admin can view user",
@@ -463,11 +718,11 @@
                 }
             }
         },
-        "/admin/user/unblock/": {
+        "/admin/user/unblock": {
             "patch": {
                 "security": [
                     {
-                        "Bearer": []
+                        "BearerTokenAuth": []
                     }
                 ],
                 "description": "using this handler admin Unblock user",
@@ -506,7 +761,7 @@
                 }
             }
         },
-        "/seller/login/": {
+        "/seller/login": {
             "post": {
                 "description": "using this handler Seller can Login",
                 "consumes": [
@@ -546,7 +801,7 @@
                 }
             }
         },
-        "/seller/signup/": {
+        "/seller/signup": {
             "post": {
                 "description": "using this handler Seller can signup",
                 "consumes": [
@@ -802,7 +1057,8 @@
             ],
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 4
                 },
                 "phone": {
                     "type": "string"
@@ -812,11 +1068,11 @@
         "response.Response": {
             "type": "object",
             "properties": {
-                "after exicution": {},
                 "error": {},
                 "message": {
                     "type": "string"
                 },
+                "result": {},
                 "status_code": {
                     "type": "integer"
                 }
@@ -856,6 +1112,11 @@
         "BearerTokenAuth": {
             "type": "apiKey",
             "name": "Authorization",
+            "in": "header"
+        },
+        "Refreshtoken": {
+            "type": "apiKey",
+            "name": "Refreshtoken",
             "in": "header"
         }
     }
